crates/huak-cli/tests/snapshots/r#mod__tests__fix_help.snap
---
source: crates/huak_cli/tests/mod.rs
info:
  program: huak
  args:
    - fix
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Auto-fix fixable lint conflicts

Usage: huak fix [OPTIONS] [-- <TRAILING>...]

Arguments:
  [TRAILING]...  Pass trailing arguments with `--`

Options:
  -q, --quiet     
      --no-color  
  -h, --help      Print help

----- stderr -----

