crates/huak-cli/tests/snapshots/r#mod__tests__python_help.snap
---
source: crates/huak-cli/tests/mod.rs
info:
  program: huak
  args:
    - python
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Manage Python installations

Usage: huak python [OPTIONS] <COMMAND>

Commands:
  list     List available Python interpreters
  use      Use an available Python interpreter
  install  Install a Python interpreter
  help     Print this message or the help of the given subcommand(s)

Options:
  -q, --quiet     
      --no-color  
  -h, --help      Print help

----- stderr -----

